<resources>
    <string name="app_name">Warehouse Inventory Management</string>
    <string name="pickup">PickUp</string>
    <string name="drop">Drop</string>
    <string name="add_product">Add Product</string>
    <string name="inventory">Inventory</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="product_id">Product ID</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="dialogueTitle">Drop Product</string>
    <string name="no">No</string>
    <string name="textview">TextView</string>
</resources>