<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234">


        <Button
            android:id="@+id/pickup"
            style="?android:attr/buttonBarStyle"
            android:layout_width="140dp"
            android:layout_height="90dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1"

            android:text="@string/pickup" />

        <Button
            android:id="@+id/drop"
            style="?android:attr/buttonBarStyle"
            android:layout_width="140dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/drop" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/addProduct"
            style="?android:attr/buttonBarStyle"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="50dp"
            android:layout_weight="1"
            android:text="@string/add_product" />

        <Button
            android:id="@+id/inventory"
            style="?android:attr/buttonBarStyle"
            android:layout_width="140dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/inventory" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>